changed widoco config

--- a/OnToology/ontology/medred.owl/documentation/medred.owl.widoco.conf
+++ b/OnToology/ontology/medred.owl/documentation/medred.owl.widoco.conf
@@ -1,6 +1,6 @@
 
 abstract=The abstract of your ontology goes here. 
-ontologyTitle=
+ontologyTitle=MedRed Ontology
 ontologyPrefix=[Ontology NS Prefix]
 ontologyNamespaceURI=[Ontology URI]
 ontologyName=[Ontology Name]
@@ -19,7 +19,7 @@ publisher=null
 publisherURI=null
 publisherInstitution=null
 publisherInstitutionURI=null
-authors=
+authors=Jean Paul Calbimonte
 authorsURI=
 authorsInstitution=
 authorsInstitutionURI=
