modified widoco conf

--- a/OnToology/ontology/medred.owl/documentation/medred.owl.widoco.conf
+++ b/OnToology/ontology/medred.owl/documentation/medred.owl.widoco.conf
@@ -1,17 +1,17 @@
 
 abstract=The abstract of your ontology goes here. 
 ontologyTitle=MedRed Ontology
-ontologyPrefix=[Ontology NS Prefix]
-ontologyNamespaceURI=[Ontology URI]
-ontologyName=[Ontology Name]
+ontologyPrefix=medred
+ontologyNamespaceURI=http://w3id.org/medred/medred#
+ontologyName=MedRed
 thisVersionURI=
 latestVersionURI=
 previousVersionURI=
-dateOfRelease=
-ontologyRevisionNumber=
-licenseURI=null
-licenseName=null
-licenseIconURL=null
+dateOfRelease=20.04.2017
+ontologyRevisionNumber=1.0.0
+licenseURI=http://creativecommons.org/licenses/by-nc-sa/2.0/
+licenseName=License name. E.g.: Creative Commons Attribution-NonCommercial-ShareAlike 2.0 Generic License
+licenseIconURL=http://i.creativecommons.org/l/by-nc-sa/2.0/88x31.png
 citeAs=
 DOI=
 status=
@@ -20,9 +20,9 @@ publisherURI=null
 publisherInstitution=null
 publisherInstitutionURI=null
 authors=Jean Paul Calbimonte
-authorsURI=
-authorsInstitution=
-authorsInstitutionURI=
+authorsURI=http://jeanpi.org
+authorsInstitution=University of Applied Sciences and Arts Western Switzerland, HES-SO Valais-Wallis 
+authorsInstitutionURI=http://hevs.ch
 contributors=
 contributorsURI=
 contributorsInstitution=
