added readme contents

--- a/OnToology/ontology/medred.owl/documentation/medred.owl.widoco.conf
+++ b/OnToology/ontology/medred.owl/documentation/medred.owl.widoco.conf
@@ -5,17 +5,17 @@ ontologyPrefix=medred
 ontologyNamespaceURI=http://w3id.org/medred/medred#
 ontologyName=MedRed ontology: medical data acquisition model
 thisVersionURI=
-latestVersionURI=
+latestVersionURI=http://w3id.org/medred/medred#
 previousVersionURI=
 dateOfRelease=
-ontologyRevisionNumber=0.0.1
+ontologyRevisionNumber=1.0.0
 licenseURI=http://purl.org/NET/rdflicense/cc-by4.0
-licenseName=null
+licenseName=CC-BY
 licenseIconURL=null
 citeAs=
 DOI=
 status=Ontology Specification Draft
-publisher=http://aislab.hevs.ch/
+publisher=Applied Intelligent Systems Lab HES-SO Valais-Wallis 
 publisherURI=http://aislab.hevs.ch/
 publisherInstitution=null
 publisherInstitutionURI=null
